# hermes-mine-bean

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml  test_harness.sh
coordinator-deliverables/: NEXT_CONFIG_SNIPPET.md
coordinator-deliverables/public/.well-known/skills/: index.json
coordinator-deliverables/public/.well-known/skills/mine-bean/: SKILL.md
coordinator-deliverables/public/.well-known/skills/mine-bean/scripts/: minebean_client.py
src/hermes_minebean/: __init__.py  cli.py  config.py  contract.py  cron_jobs.py  hooks.py  inference.py  inference_client.py  mcp_server.py  plugin_entry.py  pricing.py  rpc.py  schemas.py  signer.py  slash.py  staking.py  state.py  strategies.py  tools.py
src/hermes_minebean/abi/: gridmining.json
